# gen3_6dof_dslr_moveit_config

./: CMakeLists.txt  README.md  initialise_collision_scene.py  package.xml
config/: gen3.srdf  gen3.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_cpp.yaml  servo.yaml
description/meshes/: dslr(large_lens).stl  dslr.blend  dslr.stl  model.blend1
description/robots/: gen3.xacro  gen3_macro.xacro  kortex_robot.xacro
launch/: pivot_servo.launch.py  robot.launch.py  servo.launch.py
scene/: desk_scene.scene  draft.scene  greenhouse_rig.scene
scripts/: apply_plan_scene.py  joy_to_servo_input.py  mock_servo_input.py  pivot_tf_broadcaster.py  precompute_sequence_with_collisions.py  spherical_joy_to_servo.py  static_tf_pub.py
